php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #37780 memory leak trying to execute a non existing file (CLI)
Submitted: 2006-06-11 19:20 UTC Modified: 2006-06-19 14:53 UTC
From: judas dot iscariote at gmail dot com Assigned: mike (profile)
Status: Closed Package: CGI/CLI related
PHP Version: 6CVS-2006-06-11 (CVS) OS: Linux 64 bit
Private report: No CVE-ID: None
 [2006-06-11 19:20 UTC] judas dot iscariote at gmail dot com
Description:
------------
memory leak trying to execute a non-existing file.

Reproduce code:
---------------
php6 foobar



Expected result:
----------------
Could not open input file: foobar

Actual result:
--------------
Could not open input file: foobar
[Sun Jun 11 15:17:37 2006]  Script:  '-'
/home/cristian/php-6.0.0/main/SAPI.c(641) :  Freeing 0x00A2C730 (10 bytes), script=-
[Sun Jun 11 15:17:37 2006]  Script:  '-'
/home/cristian/php-6.0.0/main/SAPI.c(591) :  Freeing 0x00A26B90 (24 bytes), script=-
[Sun Jun 11 15:17:37 2006]  Script:  '-'
/home/cristian/php-6.0.0/Zend/zend_llist.c(39) :  Freeing 0x00A266D0 (39 bytes), script=-
=== Total 3 memory leaks detected ===


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-06-19 13:07 UTC] tony2001@php.net
Mike, it's yours output buffering stuff causing it.
 [2006-06-19 14:53 UTC] mike@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 14:00:01 2026 UTC