- Fix Bug #37780 memory leak trying to execute a non existing file (CLI)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@215028 c90b9560-bf6c-de11-be94-00142212c4b1